# simple-traffic-lights

./: .gitignore  collab_init.sh  component_test.py  cpp_converter_cmd.py  evaluate_agent.py  main.py  memory.py  multi_component_test.py  neural_net.py  phases.py  pyproject.toml  run_simulation.py  settings.py  trafffic_controller.py  training.py  training_aaai.py  training_parameters.py
FixedControllers/: cyclic_switch_controllers.py  vehicle_number_controller.py
environment/: 2lane.net.xml  2lane.rou.xml  2lane.rou_2.xml  2lane.rou_2.xml.rou.xml  2lane.sumocfg  aaai_env.py  configs_loader.py  dump.py  env.py  simple_env.py  vehicles_generator.py
environment/2lane/: 2lane.net.xml  2lane.rou.xml
environment/aaai/: aaai.net.xml  aaai.rou.xml  aaai.sumocfg
environments/: __init__.py  aaai_env.py  rlpyt_env.py  simple_env.py  sumo_env.py
evaluation/: evaluator.py
fromOpenAIBaselines/: replay_buffer.py
generators/: __init__.py  const_generator.py  lane.py  random_generator.py  sinusoidal_generator.py  vehicles_generator.py  widget_generator.py  xml_generator.py
memory/: PER.py  SumTree.py  prioritized_memory.py
model/: DQN.py
models/: frap.py  frap_production.py  neural_net.py  utils.py
replay/: replay.py
targets/: test.json
test_framework/: config_generator.py  test_geerator.py  test_generator.py
tester_settings/: test.json
traffic_controllers/: cyclic_switch_controllers.py  model_controller.py  trafffic_controller.py  vehicle_number_controller.py
trainings/: train_rlpyt.py  training.py  training_aaai.py  training_parameters.py
(+70 files in other folders)
