[tool.poetry]
name = "simple-traffic-lights"
version = "0.1.0"
description = ""
authors = ["Kasper,Marcin,Jakub"]

[tool.poetry.dependencies]
python = "~3.7"
gym = "^0.17.1"
torch = "^1.5.0"
imageio = "^2.8.0"
tensorboard = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
