[tool.poetry]
name = "simple-traffic-lights"
version = "0.1.0"
description = ""
authors = ["Kasper,Marcin,Jakub"]

[tool.poetry.dependencies]
python = "~3.7"
gym = "^0.17.1"
torch = "^1.5.0"
imageio = "^2.8.0"
tensorboard = "^2.2.2"
PyQt5 = "^5.15.1"
psutil = "^5.7.3"
pyprind = "^2.11.2"
pika = "^1.1.0"
aio-pika = "^6.7.1"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
